--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,5 +68,5 @@ dependencies {
     compile('com.yuyh.imgsel:library:2.0.2') {
         exclude module: 'support-v4'
     }
-    compile 'com.github.z3896823:PanelList:v1.3.0'
+    compile 'com.github.HYY-yu:TableRecyclerView:v1.0.0'
 }
